Fixed alignment of copyright info in footer utils nav

--- a/site/web/app/themes/host/assets/sass/layout/_footer.scss
+++ b/site/web/app/themes/host/assets/sass/layout/_footer.scss
@@ -144,7 +144,7 @@
         }
 
         &:first-child {
-            //padding-right: rem(10);
+            padding-left: 0;
             border-left: 0;
 
             @include mq($until: medium) {
